# wine-reviews

./: .gitignore  collect-reviews-by-page.py  pyproject.toml  wine-reviews-testing.ipynb
tests/: test_wine_reviews.py
wine_reviews/: __init__.py  data_models.py  scrape.py  scrape_tools.py
