[tool.poetry]
name = "wine-reviews"
version = "0.1.0"
description = ""
authors = ["Jamie McCann <j.mccann@solgenium.com>"]

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.9.3"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^7.27.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
