[tool.poetry]
name = "wine-reviews"
version = "0.1.0"
description = ""
authors = ["Jamie McCann <jamie.mccann@gmx.at>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
beautifulsoup4 = "^4.9.3"
requests = "^2.26.0"
pandas = "^1.3.4"
plotnine = "^0.8.0"
SQLAlchemy = "^1.4.27"
tqdm = "^4.62.3"
bambi = "^0.6.3"
fake-headers = "^1.0.2"
free-proxy = "^1.0.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^7.27.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
